# project

./: .gitignore  README.md  compose.yml
back/: Dockerfile  Makefile  pyproject.toml
back/api/: main.py  migrate_db.py
back/api/cruds/: answer.py  done.py  question.py  task.py  user.py
back/api/models/: task.py  user.py
back/api/routers/: answer.py  done.py  question.py  task.py  user.py
back/api/schemas/: answer.py  question.py  search.py  user.py
back/api/tests/: test_main.py
front/: Dockerfile  Makefile
front/my-app/: package-lock.json  package.json
front/my-app/api/: Api.tsx  ApiSample.tsx
front/my-app/app/: layout.tsx  page.tsx
front/my-app/app/Answers/: page.tsx
front/my-app/app/QuestionAnswer/: page.tsx
front/my-app/app/QuestionPost/: page.tsx
front/my-app/app/QuestionPost/[id]/: page.tsx
front/my-app/app/Questions/: page.tsx
front/my-app/app/Questions/[id]/: page.tsx
front/my-app/app/login/: page.tsx
front/my-app/components/: Footer.tsx  Header.tsx
